# phoenix-contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION.md  Makefile  README.md  architecture.md  rust-toolchain.toml
contracts/factory/: Cargo.toml  Makefile  README.md
contracts/factory/src/: contract.rs  error.rs  lib.rs  storage.rs  tests.rs  utils.rs
contracts/factory/src/tests/: admin_change.rs  config.rs  pool_coexistence.rs  queries.rs  setup.rs
contracts/multihop/: Cargo.toml  Makefile  README.md
contracts/multihop/src/: contract.rs  error.rs  lib.rs  storage.rs  tests.rs  utils.rs
contracts/multihop/src/tests/: admin_change.rs  pool_coexistence.rs  query.rs  setup.rs  swap.rs  verify_operations.rs
contracts/pair/: Cargo.toml  Makefile
contracts/pair/src/: contract.rs  error.rs  lib.rs  storage.rs  tests.rs  token.rs  utils.rs
contracts/pair/src/tests/: config.rs  liquidity.rs  setup.rs  stake_deployment.rs  swap.rs
contracts/pool/: Cargo.toml  Makefile  README.md  justfile
contracts/pool/.certora_internal/: latest
contracts/pool/.certora_internal/25_03_05_12_19_22_723/: .certora_metadata.json  certora_debug_log.txt
contracts/pool/confs/: setup.conf
contracts/pool/confs/.certora_internal/: .certora_recent_jobs.json  latest
contracts/pool/confs/.certora_internal/25_03_04_14_50_15_786/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_04_14_50_49_941/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_04_15_04_15_652/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_04_15_28_20_636/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_04_15_30_35_973/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_04_16_29_09_053/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt  run.conf
contracts/pool/confs/.certora_internal/25_03_05_10_45_30_953/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_11_26_43_822/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_11_47_20_094/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt  run.conf
contracts/pool/confs/.certora_internal/25_03_05_11_57_50_393/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_12_08_04_631/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_12_19_28_105/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_12_25_49_417/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_14_04_42_974/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_14_30_12_024/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_14_40_17_026/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_15_21_02_718/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt  run.conf
contracts/pool/confs/.certora_internal/25_03_05_15_46_54_459/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_16_50_46_518/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/confs/.certora_internal/25_03_05_16_54_21_977/: .certora_metadata.json  .vscode_extension_info.json  certora_debug_log.txt
contracts/pool/src/: contract.rs  contracterror.rs  error.rs  lib.rs  storage.rs  tests.rs
contracts/pool/src/certora/: spec.rs
contracts/pool/src/tests/: admin_change.rs  config.rs  liquidity.rs  pool_deployment.rs  setup.rs  stake_deployment.rs  swap.rs
contracts/pool_stable/: Cargo.toml  Makefile  README.md
contracts/pool_stable/src/: contract.rs  error.rs  lib.rs  math.rs  storage.rs  tests.rs
contracts/pool_stable/src/tests/: admin_change.rs  config.rs  liquidity.rs  pool_deployment.rs  pool_stable_deployment.rs  queries.rs  setup.rs  stake_deployment.rs  swap.rs
contracts/stake/: Cargo.toml  Makefile  README.md
contracts/stake/src/: contract.rs  distribution.rs  error.rs  lib.rs  msg.rs  storage.rs  tests.rs  utils.rs
contracts/stake/src/tests/: admin_change.rs  bond.rs  distribution.rs  migration_test.sh  rewards.rs  setup.rs  unbond_settles_rewards.rs  updates.rs
contracts/stake_rewards/: Cargo.toml  Makefile  README.md
contracts/stake_rewards/src/: contract.rs  distribution.rs  error.rs  lib.rs  msg.rs  storage.rs  tests.rs
contracts/stake_rewards/src/tests/: bond.rs  distribution.rs  setup.rs
contracts/token/: Cargo.toml  Makefile  README.md  certora_build.py  justfile
contracts/token/confs/: setup.conf
contracts/token/confs/.certora_internal/: .certora_recent_jobs.json  latest
contracts/token/src/: admin.rs  allowance.rs  contract.rs  lib.rs  metadata.rs  test.rs
contracts/token/src/certora/: spec.rs
contracts/trader/: Cargo.toml  Makefile  README.md
contracts/trader/src/: contract.rs  error.rs  lib.rs  storage.rs  tests.rs
contracts/trader/src/tests/: admin_change.rs  msgs.rs  setup.rs
contracts/vesting/: Cargo.toml  Makefile  README.md
contracts/vesting/src/: contract.rs  error.rs  lib.rs  storage.rs  tests.rs  utils.rs
contracts/vesting/src/tests/: admin_change.rs  claim.rs  config.rs  instantiate.rs  messages.rs  minter.rs  other_operations.rs  setup.rs  transfer.rs  transfers.rs
(+132 files in other folders)
