[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Phoenix-Protocol-Group/phoenix-contracts"

[workspace.dependencies]
curve = { path = "./packages/curve" }
soroban-decimal = { path = "./packages/decimal" }
phoenix = { path = "./packages/phoenix" }
num-integer = { version = "0.1.45", default-features = false, features = [
    "i128",
] }
soroban-sdk = "22.0.0-rc.3.2"
soroban-token-sdk = "22.0.0-rc.3.2"
test-case = "3.3"
pretty_assertions = "1.4.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
