[package]
name = "phoenix-factory"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>"]
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]
upgrade = []

[dependencies]
soroban-sdk = { workspace = true }
phoenix = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
