[package]
name = "phoenix-trader"
version = { workspace = true }
authors = ["Jakub <jakub@moonbite.space>", "Kaloyan <gangov1@gmail.com>"]
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-decimal = { workspace = true }
phoenix = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-case = "3.3.1"
